# icqdesktop

./: .gitignore  CMakeLists.txt  NOTICE.md  README.CMAKE.txt  README.md  README.txt  config_linux.sh  icq.sln  sign.py
gui/: .gitignore  CMakeLists.txt  LoadPixmapFromDataTask.cpp  LoadPixmapFromDataTask.h  Resource-agent.rc  Resource.rc  app_config.cpp  app_config.h  collection_helper_ext.h  constants.h  contextMenuEvent.cpp  contextMenuEvent.h  core_dispatcher.cpp  core_dispatcher.h  cp_afxres.h  fonts.cpp  fonts.h  gui.pro  gui.vcxproj  gui.vcxproj.filters  gui_settings.cpp  gui_settings.h  my_info.cpp  my_info.h  namespaces.h  platform.cpp  platform.h  qt_prebuild.py  qt_prebuild_linux.py  qt_prebuild_mac.py  remote_proc.cpp  resource.qrc  stdafx.h  theme_settings.cpp  theme_settings.h
gui/cache/: countries.cpp  countries.h
gui/cache/avatars/: AvatarStorage.cpp  AvatarStorage.h
gui/cache/emoji/: Emoji.cpp  Emoji.h  EmojiDb.cpp  EmojiDb.h  EmojiIndexData.cpp
gui/cache/snaps/: SnapStorage.cpp  SnapStorage.h
gui/cache/stickers/: stickers.cpp  stickers.h
gui/cache/themes/: themes.h  themes_cache.cpp
gui/controls/: Alert.cpp  Alert.h  AvatarPreview.cpp  AvatarPreview.h  BackButton.cpp  BackButton.h  BackgroundWidget.cpp  BackgroundWidget.h  CommonStyle.cpp  CommonStyle.h  ConnectionSettingsWidget.cpp  ConnectionSettingsWidget.h  ContactAvatarWidget.cpp  ContactAvatarWidget.h  ContextMenu.cpp  ContextMenu.h  CountrySearchCombobox.cpp  CountrySearchCombobox.h  CustomButton.cpp  CustomButton.h  DpiAwareImage.cpp  DpiAwareImage.h  FlatMenu.cpp  FlatMenu.h  FlowLayout.cpp  FlowLayout.h  GeneralCreator.cpp  GeneralCreator.h  GeneralDialog.cpp  GeneralDialog.h  HorScrollableView.cpp  HorScrollableView.h  ImageCropper.cpp  ImageCropper.h  LabelEx.cpp  LabelEx.h  LineEditEx.cpp  LineEditEx.h  PictureWidget.cpp  PictureWidget.h  (+16 more)
gui/main_window/: AccountsPage.cpp  ContactDialog.cpp  ContactDialog.h  GroupChatOperations.cpp  GroupChatOperations.h  IntroduceYourself.cpp  IntroduceYourself.h  LoginPage.cpp  LoginPage.h  MainMenu.cpp  MainMenu.h  MainPage.cpp  MainPage.h  MainWindow.cpp  MainWindow.h  PromoPage.cpp  PromoPage.h  SnapsPage.cpp  SnapsPage.h  TitleBar.cpp  TitleBar.h  accounts_page.qss  login_page.qss  main_menu.qss  main_window.qss
gui/main_window/contact_list/: AbstractSearchModel.cpp  AbstractSearchModel.h  ChatMembersModel.cpp  ChatMembersModel.h  Common.cpp  Common.h  ContactItem.cpp  ContactItem.h  ContactList.cpp  ContactList.h  ContactListItemDelegate.cpp  ContactListItemDelegate.h  ContactListItemRenderer.cpp  ContactListItemRenderer.h  ContactListModel.cpp  ContactListModel.h  CustomAbstractListModel.cpp  CustomAbstractListModel.h  RecentItemDelegate.cpp  RecentItemDelegate.h  RecentsItemRenderer.cpp  RecentsItemRenderer.h  RecentsModel.cpp  RecentsModel.h  SearchMembersModel.cpp  SearchMembersModel.h  SearchModel.cpp  SearchModel.h  SearchModelDLG.cpp  SearchModelDLG.h  SearchWidget.cpp  SearchWidget.h  SelectionContactsForGroupChat.cpp  SelectionContactsForGroupChat.h  SettingsTab.cpp  SettingsTab.h  SettingsTab.qss  SettingsWidget.cpp  SettingsWidget.h  SnapItemDelegate.cpp  (+10 more)
gui/main_window/history_control/: ActionButtonWidget.cpp  ActionButtonWidget.h  ActionButtonWidgetLayout.cpp  ActionButtonWidgetLayout.h  ChatEventInfo.cpp  ChatEventInfo.h  ChatEventItem.cpp  ChatEventItem.h  DeletedMessageItem.cpp  DeletedMessageItem.h  FileSharingInfo.cpp  FileSharingInfo.h  FileSharingWidget.cpp  FileSharingWidget.h  FileSizeFormatter.cpp  FileSizeFormatter.h  HistoryButtonDown.cpp  HistoryButtonDown.h  HistoryControl.cpp  MessageItem.cpp  (+55 more)
gui/previewer/: Bicubic.cpp  Bicubic.h  DownloadWidget.cpp  GalleryFrame.cpp  GalleryFrame.h  GalleryWidget.cpp  GalleryWidget.h  ImageCache.cpp  ImageCache.h  ImageIterator.cpp  ImageIterator.h  ImageLoader.cpp  ImageLoader.h  ImageViewerImpl.cpp  ImageViewerImpl.h  ImageViewerWidget.cpp  ImageViewerWidget.h  PreviewWidget.cpp  PreviewWidget.h  Previewer.cpp  Previewer.h
gui/themes/: IcqStyle.cpp  IcqStyle.h  ResourceIds.h  ThemePixmap.cpp  ThemePixmap.h  ThemePixmapDb.inc  Themes.cpp  Themes.h
gui/translations/: ar.ts  ar_mark_finished.bat  cs.ts  cs_mark_finished.bat  de.ts  de_mark_finished.bat  en.ts  en_mark_finished.bat  fr.ts  fr_mark_finished.bat  pt.ts  pt_mark_finished.bat  ru.ts  ru_mark_finished.bat  uk.ts  uk_mark_finished.bat  update_translations.bat
gui/types/: chat.cpp  chat.h  common_phone.cpp  common_phone.h  contact.cpp  contact.h  images.cpp  images.h  link_metadata.cpp  link_metadata.h  message.cpp  message.h  snap.cpp  snap.h  typing.cpp  typing.h
gui/utils/: IntValidator.cpp  IntValidator.h  InterConnector.cpp  InterConnector.h  LoadMovieFromFileTask.cpp  LoadMovieFromFileTask.h  LoadPixmapFromDataTask.cpp  LoadPixmapFromDataTask.h  LoadPixmapFromFile.cpp  LoadPixmapFromFileTask.h  PainterPath.cpp  PainterPath.h  SChar.cpp  SChar.h  Text.cpp  Text.h  Text2DocConverter.cpp  Text2DocConverter.h  UrlParser.cpp  UrlParser.h  application.cpp  application.h  common_style.qss  gui_coll_helper.cpp  gui_coll_helper.h  launch.cpp  launch.h  local_peer.cpp  local_peer.h  mac_migration.h  mac_migration.mm  mac_support.h  mac_support.mm  translator.cpp  translator.h  translit.cpp  translit.h  uid.cpp  uid.h  utils.cpp  (+1 more)
gui/voip/: AvatarContainerWidget.cpp  AvatarContainerWidget.h  CallMenu.cpp  CallMenu.h  CallPanelMain.cpp  CallPanelMain.h  CommonUI.cpp  CommonUI.h  DetachedVideoWnd.cpp  DetachedVideoWnd.h  IncomingCallWindow.cpp  IncomingCallWindow.h  MaskManager.cpp  MaskManager.h  MaskPanel.cpp  MaskPanel.h  Masks.cpp  Masks.h  NameAndStatusWidget.cpp  NameAndStatusWidget.h  PushButton_t.cpp  PushButton_t.h  SelectionContactsForConference.cpp  SelectionContactsForConference.h  VideoFrame.cpp  VideoFrame.h  VideoPanel.cpp  VideoPanel.h  VideoPanelHeader.cpp  VideoPanelHeader.h  VideoSettings.cpp  VideoSettings.h  VideoWindow.cpp  VideoWindow.h  VoipProxy.cpp  VoipProxy.h  VoipSysPanelHeader.cpp  VoipSysPanelHeader.h  VoipTools.h  WindowHeaderFormat.h  (+7 more)
tests/unit_tests/: CMakeLists.txt  main.cpp  stdafx.h
(+797 files in other folders)
